# Independent-Study_DP-Plot

./: DP-image-10.py  DP-image-11.py  DP-image-12.py  DP-image-13.py  DP-image-14.py  DP-image-15.py  DP-image-16.py  DP-image-17.py  DP-image-18.py  DP-image-19.py  DP-image-20.py  DP-image-21.py  README.md  cal_dis_val.py  pyproject.toml
Temp/: DP-image-13.py  DP-image-14.py  Graph1.py  Graph2.py
