[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
seaborn = "^0.13.2"
pandas = "^2.2.2"
numpy = "^1.26.4"
scipy = "^1.13.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"
jupyterlab = "^4.1.8"
pyqt6 = "^6.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
